--- a/index.html
+++ b/index.html
@@ -19,12 +19,48 @@
             <p id="first-p">Imagine you don't need a diet Beacause we provide healthy and delicous food for you</p>
             <a class="link-button" target="blank" href="https://foodland.com.bd/">Order Food</a>
         </div>
-
         <div class="half-width">
             <img src="images/Group 8448 (1).png" alt="">
         </div>
+    </section>
 
 
+    <section class="flex-cont back-img">
+        <div class="half-width">
+            <img id="about-img" src="images/Person Image.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>About Us</h2>
+            <p id="second-p">Our dream was to change our health through nutiotion.Mnay years later and after spotting
+                gaps in the
+                foodservice market fo rbetter quality meals at more attractive prices, The health food company has grown
+                to become one of the country's leading suppliers of health,nutritious and delicious food in Bangladesh.
+            </p>
+            <a class="link-button" target="blank" href="https://github.com/MadihaJarrin">Contact Me</a>
+        </div>
+    </section>
+
+
+    <section>
+        <div>
+            <h2>My Recipes</h2>
+            <p>In Food Land, my recipy is famous for unique and different tastes. I always try to give best output for
+                my passion. People admire me. It further enchances my desire for work.</p>
+        </div>
+
+        <div>
+
+        </div>
+
+    </section>
+
+
+
+    <section>
+        <footer>
+            <h2><span>Food</span> Land</h2>
+            <small>We share Happyness!</small>
+        </footer>
     </section>
 
 </body>
