--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food-Land</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&family=Poppins:ital,wght@0,500;1,400;1,600&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <section class="flex-cont">
+    <section class="flex-cont distance">
         <div class="half-width">
             <h1><span>Skip</span> The Diet,</h1>
             <h1>Just Eat Healthy </h1>
@@ -20,7 +25,7 @@
             <a class="link-button" target="blank" href="https://foodland.com.bd/">Order Food</a>
         </div>
         <div class="half-width">
-            <img src="images/Group 8448 (1).png" alt="">
+            <img src="images/Group 8425.png" alt="">
         </div>
     </section>
 
@@ -48,9 +53,35 @@
                 my passion. People admire me. It further enchances my desire for work.</p>
         </div>
 
-        <div>
+        <div class="flex-cont">
+
+            <div id="reci-img1" class="recipe-title text">
+                <h3>Recipie Title</h3>
+
+                <p>Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit. Lacus,
+                    fermentum amet faucibus sed id nisi
+                    lectus at</p>
+            </div>
+            <div id="reci-img2" class="recipe-title ">
+                <h3>Recipie Title</h3>
+
+                <p>Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit. Lacus,
+                    fermentum amet faucibus sed id nisi
+                    lectus at</p>
+            </div>
+            <div id="reci-img3" class="recipe-title ">
+                <h3>Recipie Title</h3>
+
+                <p>Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit. Lacus,
+                    fermentum amet faucibus sed id nisi
+                    lectus at</p>
+            </div>
 
         </div>
+
 
     </section>
 
