--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p id="first-p">Imagine you don't need a diet Beacause we provide healthy and delicous food for you</p>
             <a class="link-button" target="blank" href="https://foodland.com.bd/">Order Food</a>
         </div>
-        <div class="half-width">
+        <div id="skip-img" class="half-width">
             <img src="images/Group 8425.png" alt="">
         </div>
     </section>
@@ -32,11 +32,11 @@
 
     <section class="flex-cont back-img">
         <div class="half-width">
-            <img id="about-img" src="images/Person Image.png" alt="">
+            <img id="about-img" src="images/my-bg3.png" alt="">
         </div>
         <div class="half-width">
-            <h2>About Us</h2>
-            <p id="second-p">Our dream was to change our health through nutiotion.Mnay years later and after spotting
+            <h2>About Me</h2>
+            <p class="second-p">My dream was to change my health through nutiotion.Mnay years later and after spotting
                 gaps in the
                 foodservice market fo rbetter quality meals at more attractive prices, The health food company has grown
                 to become one of the country's leading suppliers of health,nutritious and delicious food in Bangladesh.
@@ -47,7 +47,7 @@
 
 
     <section>
-        <div>
+        <div class="my-recipes">
             <h2>My Recipes</h2>
             <p>In Food Land, my recipy is famous for unique and different tastes. I always try to give best output for
                 my passion. People admire me. It further enchances my desire for work.</p>
@@ -55,29 +55,28 @@
 
         <div class="flex-cont">
 
-            <div id="reci-img1" class="recipe-title text">
+            <div class="recipe-title half-width">
+                <img src="images/Project Cover5.png" alt="">
                 <h3>Recipie Title</h3>
-
-                <p>Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit. Lacus,
-                    fermentum amet faucibus sed id nisi
-                    lectus at</p>
+                <p class="second-p">Place meat on bottom of 9 X 13 pan.
+                    Spread veggies over top.
+                    Mix sugar, salt and tapioca in small bowl and then sprinkle over all the meat and veggies</p>
             </div>
-            <div id="reci-img2" class="recipe-title ">
+            <div class="recipe-title half-width ">
+                <img src="images/Project Cover.png" alt="">
                 <h3>Recipie Title</h3>
 
-                <p>Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit. Lacus,
-                    fermentum amet faucibus sed id nisi
-                    lectus at</p>
+                <p class="second-p">Place meat on bottom of 9 X 13 pan.
+                    Spread veggies over top.
+                    Mix sugar, salt and tapioca in small bowl and then sprinkle over all the meat and veggies</p>
             </div>
-            <div id="reci-img3" class="recipe-title ">
+            <div class="recipe-title half-width">
+                <img src="images/Project Cover7.png" alt="">
                 <h3>Recipie Title</h3>
 
-                <p>Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit. Lacus,
-                    fermentum amet faucibus sed id nisi
-                    lectus at</p>
+                <p class="second-p">Place meat on bottom of 9 X 13 pan.
+                    Spread veggies over top.
+                    Mix sugar, salt and tapioca in small bowl and then sprinkle over all the meat and veggies</p>
             </div>
 
         </div>
