--- a/index.html
+++ b/index.html
@@ -78,13 +78,37 @@
                     Spread veggies over top.
                     Mix sugar, salt and tapioca in small bowl and then sprinkle over all the meat and veggies</p>
             </div>
-
         </div>
-
 
     </section>
 
 
+    <section>
+        <h1>Offer</h1>
+        <div class="flex-cont offer">
+            <img src="images/green.jpg " alt="Green Food">
+
+            <img src="images/junk.jpg" alt="Fast Food">
+
+            <img src="images/desert-5.jpg " alt="">
+
+            <img src="images/drink.jpg" alt="">
+
+            <img src="images/platter 5.jpg" alt="">
+
+        </div>
+        <div class="flex-cont">
+            <p class="pera">Green</p>
+            <p class="pera">Fast-Food</p>
+            <p class="pera">Desert</p>
+            <p class="pera">Soft-Drinks</p>
+            <p class="pera">Platter</p>
+
+        </div>
+
+
+
+    </section>
 
     <section>
         <footer>
