--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&family=Poppins:ital,wght@0,500;1,400;1,600&display=swap"
         rel="stylesheet">
-
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -29,7 +28,6 @@
         </div>
     </section>
 
-
     <section class="flex-cont back-img">
         <div class="half-width">
             <img id="about-img" src="images/my-bg3.png" alt="">
@@ -45,7 +43,6 @@
         </div>
     </section>
 
-
     <section>
         <div class="my-recipes">
             <h2>My Recipes</h2>
@@ -53,8 +50,7 @@
                 my passion. People admire me. It further enchances my desire for work.</p>
         </div>
 
-        <div class="flex-cont">
-
+        <div id="food" class="flex-cont">
             <div class="recipe-title half-width">
                 <img src="images/Project Cover5.png" alt="">
                 <h3>Recipie Title</h3>
@@ -65,7 +61,6 @@
             <div class="recipe-title half-width ">
                 <img src="images/Project Cover.png" alt="">
                 <h3>Recipie Title</h3>
-
                 <p class="second-p">Place meat on bottom of 9 X 13 pan.
                     Spread veggies over top.
                     Mix sugar, salt and tapioca in small bowl and then sprinkle over all the meat and veggies</p>
@@ -73,29 +68,21 @@
             <div class="recipe-title half-width">
                 <img src="images/Project Cover7.png" alt="">
                 <h3>Recipie Title</h3>
-
                 <p class="second-p">Place meat on bottom of 9 X 13 pan.
                     Spread veggies over top.
                     Mix sugar, salt and tapioca in small bowl and then sprinkle over all the meat and veggies</p>
             </div>
         </div>
-
     </section>
 
-
     <section>
-        <h1>Offer</h1>
+        <h1 id="off-h1">15% Offer</h1>
         <div class="flex-cont offer">
             <img src="images/green.jpg " alt="Green Food">
-
             <img src="images/junk.jpg" alt="Fast Food">
-
             <img src="images/desert-5.jpg " alt="">
-
             <img src="images/drink.jpg" alt="">
-
             <img src="images/platter 5.jpg" alt="">
-
         </div>
         <div class="flex-cont">
             <p class="pera">Green</p>
@@ -103,17 +90,19 @@
             <p class="pera">Desert</p>
             <p class="pera">Soft-Drinks</p>
             <p class="pera">Platter</p>
-
         </div>
-
-
-
+        <div class="my-recipes you-like">
+            <h2>You Like?</h2>
+            <input type="button" value="Yes">
+            <input type="button" value="No">
+        </div>
     </section>
 
     <section>
         <footer>
             <h2><span>Food</span> Land</h2>
-            <small>We share Happyness!</small>
+            <p>Here we are and We Share Happiness</p>
+            <small>madihajarrin@gmail.com</small>
         </footer>
     </section>
 
