--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
         </div>
         <div class="half-width">
             <h2>About Me</h2>
-            <p class="second-p">My dream was to change my health through nutiotion.Mnay years later and after spotting
-                gaps in the
-                foodservice market fo rbetter quality meals at more attractive prices, The health food company has grown
-                to become one of the country's leading suppliers of health,nutritious and delicious food in Bangladesh.
+            <p class="second-p">Willpower is the greatest strength.The flaming of making this food is from the desire
+                to do something .My dream is to change people's health through nutiotion. " Outside food means unhealthy
+                food " that was my attempt to disprove this statement.
             </p>
             <a class="link-button" target="blank" href="https://github.com/MadihaJarrin">Contact Me</a>
         </div>
@@ -76,7 +75,7 @@
     </section>
 
     <section>
-        <h1 id="off-h1">15% Offer</h1>
+        <h1 class="off-h1">15% Offer</h1>
         <div class="flex-cont offer">
             <img src="images/green.jpg " alt="Green Food">
             <img src="images/junk.jpg" alt="Fast Food">
@@ -95,6 +94,11 @@
             <h2>You Like?</h2>
             <input type="button" value="Yes">
             <input type="button" value="No">
+        </div>
+        <div>
+            <p class="off-h1"> <span>Follow us on </span> <a href="https://web.facebook.com/yummybite101/">facebook-page
+            </p>
+
         </div>
     </section>
 
