--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
     <section>
         <h1 class="off-h1">15% Offer</h1>
         <div class="flex-cont offer">
-            <img src="images/green.jpg " alt="Green Food">
-            <img src="images/junk.jpg" alt="Fast Food">
+            <img src="images/green.jpg " alt="">
+            <img src="images/junk.jpg" alt="">
             <img src="images/desert-5.jpg " alt="">
             <img src="images/drink.jpg" alt="">
             <img src="images/platter 5.jpg" alt="">
