--- a/index.html
+++ b/index.html
@@ -95,11 +95,8 @@
             <input type="button" value="Yes">
             <input type="button" value="No">
         </div>
-        <div>
-            <p class="off-h1"> <span>Follow us on </span> <a href="https://web.facebook.com/yummybite101/">facebook-page
-            </p>
-
-        </div>
+        <p class="off-h1"> <span>Follow us on </span> <a href="https://web.facebook.com/yummybite101/">facebook-page</a>
+        </p>
     </section>
 
     <section>
