--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     Mix sugar, salt and tapioca in small bowl and then sprinkle over all the meat and veggies</p>
             </div>
             <div class="recipe-title half-width ">
-                <img src="images/Project Cover.png" alt="">
+                <img src="images/Project Cover8.png" alt="">
                 <h3>Recipie Title</h3>
                 <p class="second-p">Place meat on bottom of 9 X 13 pan.
                     Spread veggies over top.
