--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <section class="flex-cont distance">
+    <section id="distance" class="flex-cont ">
         <div class="half-width">
             <h1><span>Skip</span> The Diet,</h1>
             <h1>Just Eat Healthy </h1>
@@ -28,7 +28,7 @@
         </div>
     </section>
 
-    <section class="flex-cont back-img">
+    <section id="back-img" class="flex-cont">
         <div class="half-width">
             <img id="about-img" src="images/my-bg3.png" alt="">
         </div>
@@ -90,7 +90,7 @@
             <p class="pera">Soft-Drinks</p>
             <p class="pera">Platter</p>
         </div>
-        <div class="my-recipes you-like">
+        <div id="you-like" class="my-recipes ">
             <h2>You Like?</h2>
             <input type="button" value="Yes">
             <input type="button" value="No">
