--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <p class="pera">Platter</p>
         </div>
         <div id="you-like" class="my-recipes ">
-            <h2>You Like?</h2>
+            <h2>Do You Like it?</h2>
             <input type="button" value="Yes">
             <input type="button" value="No">
         </div>
